atualizar estilos e informações dos produtos nas páginas de acessórios, camisetas e gamers

--- a/acessorios.html
+++ b/acessorios.html
@@ -29,122 +29,91 @@
         <h1 class=>Acessórios</h1>
         <div class="row mt-4">
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 1">
-                    <div class="card-body">
-                        <h5 class="card-title"># </h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0,0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Bolsa/Mochila Méqui</h5>
+                        <p class="card-text text-muted">173,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Bolsa/Mochila Méqui', 173.90)">
+                            <i class="bi bi-cart"></i>comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 2">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Tiara Ratatouille Chef Remy</h5>
+                        <p class="card-text text muted">59,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#Tiara Ratatouille Chef Remy', 59.90)">
+                            <i class="bi bi-cart"></i>comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 3">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Par de Anéis Pequeno Príncipe </h5>
+                        <p class="card-text text-muted">188.90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Par de Anéis Pequeno Príncipe', 188.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 4">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Chaveiro NewJeans x Meninas Superpoderosas</h5>
+                        <p class="card-text text-muted">21.90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Chaveiro NewJeans x Meninas Superpoderosas', 21.90)">
+                            <i class="bi bi-cart"></i> Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 5">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Pulseira Jedi Star Wars</h5>
+                        <p class="card-text text-muted">88,90</p>
+                        <a  class="btn btn-primary" onclick="adicionarAoCarrinho('#Pulseira Jedi Star Wars', 88.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 6">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Colar Melody A Pequena Sereia</h5>
+                        <p class="card-text text-muted">69,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Colar Melody A Pequena Sereia', 69.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 7">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Colar sword</h5>
+                        <p class="card-text text-muted">59,90
+                        </p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Colar sword', 59.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 mb-4">
-                <div class="card">
+                <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Acessórios 8">
-                    <div class="card-body">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text">#</p>
-                        <a href="#" class="btn btn-primary" onclick="adicionarAoCarrinho('#', 0.0)"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-cart" viewBox="0 0 16 16">
-                                <path
-                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>Comprar</a>
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Colar Assassin's Creed</h5>
+                        <p class="card-text text-muted">59,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho(`Colar Assassin's Creed`, 59.90)">
+                            <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
             </div>
