--- a/camisetas.html
+++ b/camisetas.html
@@ -34,7 +34,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Homem-Aranha Run</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary" onclick="adicionarAoCarrinho('Camiseta Homem-Aranha run', 69.90)">
+            <a  class="btn btn-outline-primary" onclick="adicionarAoCarrinho('Camiseta Homem-Aranha run', 69.90)">
               <i class="bi bi-cart"></i> Comprar</a>
           </div>
         </div>
@@ -48,7 +48,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Homem-Aranha</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary" onclick="adicionarAoCarrinho('Camiseta Homem-Aranha', 69.90)">
+            <a class="btn btn-outline-primary" onclick="adicionarAoCarrinho('Camiseta Homem-Aranha', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
@@ -61,7 +61,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Jujutsu Kaisen</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary" onclick="adicionarAoCarrinho('Camiseta jujutsu Kaisen', 69.90)">
+            <a class="btn btn-outline-primary" onclick="adicionarAoCarrinho('Camiseta jujutsu Kaisen', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
@@ -74,7 +74,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Hunter x Hunter</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Hunter x Hunter', 69.90)">
+            <a class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Hunter x Hunter', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
@@ -87,7 +87,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Rick and Morty</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Rick and Morty', 69.90)">
+            <a class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Rick and Morty', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
@@ -100,7 +100,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Invincible</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Invincible', 69.90)">
+            <a class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Invincible', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
@@ -113,7 +113,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta IT: A Coisa</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta IT: A coisa', 69.90)">
+            <a class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta IT: A coisa', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
@@ -126,7 +126,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Camiseta Mortal Kombat</h5>
             <p class="card-text text-muted">R$ 69,90</p>
-            <a href="#" class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Mortal Kombat', 69.90)">
+            <a class="btn btn-outline-primary "onclick="adicionarAoCarrinho('Camiseta Mortal Kombat', 69.90)">
               <i class="bi bi-cart"></i> Comprar
             </a>
           </div>
