--- a/gamers.html
+++ b/gamers.html
@@ -33,9 +33,8 @@
                     <img src="Imagens/notebook gamer.webp" class="card-img-top" alt="Gamers 1" title="notebook gamer">
                     <div class="card-body text-center">
                         <h5 class="card-title">notebook gamer </h5>
-                        <p class="card-text">Notebook Gamer Acer Nitro V15 Intel </p>
                         <p class="card-text text-muted">$4.219,90</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('notebook gamer', 4.219,90)">
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('notebook gamer', 4219.90)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -45,9 +44,8 @@
                     <img src="Imagens/xbox series s.webp" class="card-img-top" alt="Gamers 2">
                     <div class="card-body text-center">
                         <h5 class="card-title">xbox series s</h5>
-                        <p class="card-text">Console Xbox Series S 512GB</p>
                         <p class="card-text text-muted">$2.499,99</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('xbox series s', 2.499,99)">
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('xbox series s', 2499.99)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -57,9 +55,8 @@
                     <img src="Imagens/Computador pc gamer.webp" class="card-img-top" alt="Gamers 3" title="Computador pc gamer">
                     <div class="card-body text-center">
                         <h5 class="card-title">Computador pc gamer</h5>
-                        <p class="card-text">Computador Gamer Completo 16Gb Ram / Ssd 480Gb</p>
                         <p class="card-text text-muted">$2.099,49</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Computador pc gamer', 2.099,49)">
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Computador pc gamer', 2099.49)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -71,7 +68,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Water Cooler Gamdias</h5>
                         <p class="card-text text-muted">$337,37</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Water Cooler Gamdias', 337,37)">
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Water Cooler Gamdias', 337.37)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -80,9 +77,9 @@
                 <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Gamers 5" title="Gamers 5">
                     <div class="card-body text-center">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text text-muted">#</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                        <h5 class="card-title">Console PlayStation 5 Slim</h5>
+                        <p class="card-text text-muted">3.254,07</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#Console PlayStation 5 Slim', 3254.07)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -91,9 +88,9 @@
                 <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Gamers 6" title="Gamers 6">
                     <div class="card-body text-center">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text text-muted">#</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                        <h5 class="card-title">Volante Logitech G923</h5>
+                        <p class="card-text text-muted">2.699,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Volante Logitech G923', 2699.90)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -102,9 +99,9 @@
                 <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Gamers 7" title="Gamers 7">
                     <div class="card-body text-center">
-                        <h5 class="card-title">#</h5>
+                        <h5 class="card-title">PlayStation VR2 + Horizon Call of the Mountain</h5>
                         <p class="card-text text-muted">#</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('PlayStation VR2 + Horizon Call of the Mountain', 2882.07)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
@@ -113,9 +110,9 @@
                 <div class="card h-100 shadow-sm">
                     <img src="Imagens/" class="card-img-top" alt="Gamers 8" title="Gamers 8">
                     <div class="card-body text-center">
-                        <h5 class="card-title">#</h5>
-                        <p class="card-text text-muted">#</p>
-                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('#', #.#)">
+                        <h5 class="card-title">Console Nintendo Switch Lite</h5>
+                        <p class="card-text text-muted">1.299,90</p>
+                        <a class="btn btn-primary" onclick="adicionarAoCarrinho('Console Nintendo Switch Lite', 1299.90)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
                 </div>
