atualizar títulos das páginas e imagens dos produtos, melhorar estrutura do rodapé e adicionar validação ao formulário de parcerias

--- a/carrinho.html
+++ b/carrinho.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeekStore</title>
+    <title>Carrinho | GeekStore</title>
  
-
     <meta charset="UTF-8" />
     <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,9 +26,7 @@
             font-weight: 600;
         }
 
-        .btn {
-            border-radius: 1rem;
-        }
+        
     </style>
 </head>
 
