--- a/acessorios.html
+++ b/acessorios.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acessórios</title>
+    <title>Acessórios | GeekStore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -30,7 +30,7 @@
         <div class="row mt-4">
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 1">
+                    <img src="Imagens/acessorio1.png" class="card-img-top" alt="Acessórios 1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Bolsa/Mochila Méqui</h5>
                         <p class="card-text text-muted">173,90</p>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 2">
+                    <img src="Imagens/acessorio2.png" class="card-img-top" alt="Acessórios 2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tiara Ratatouille Chef Remy</h5>
                         <p class="card-text text muted">59,90</p>
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 3">
+                    <img src="Imagens/acessorio3.jpg" class="card-img-top" alt="Acessórios 3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Par de Anéis Pequeno Príncipe </h5>
                         <p class="card-text text-muted">188.90</p>
@@ -63,7 +63,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 4">
+                    <img src="Imagens/acessorio4.png" class="card-img-top" alt="Acessórios 4">
                     <div class="card-body text-center">
                         <h5 class="card-title">Chaveiro NewJeans x Meninas Superpoderosas</h5>
                         <p class="card-text text-muted">21.90</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 5">
+                    <img src="Imagens/acessorio5.jpg" class="card-img-top" alt="Acessórios 5">
                     <div class="card-body text-center">
                         <h5 class="card-title">Pulseira Jedi Star Wars</h5>
                         <p class="card-text text-muted">88,90</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 6">
+                    <img src="Imagens/acessorio6.jpg" class="card-img-top" alt="Acessórios 6">
                     <div class="card-body text-center">
                         <h5 class="card-title">Colar Melody A Pequena Sereia</h5>
                         <p class="card-text text-muted">69,90</p>
@@ -96,9 +96,9 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 7">
+                    <img src="Imagens/acessorio7.webp" class="card-img-top" alt="Acessórios 7">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Colar sword</h5>
+                        <h5 class="card-title">Brinco sword</h5>
                         <p class="card-text text-muted">59,90
                         </p>
                         <a class="btn btn-primary" onclick="adicionarAoCarrinho('Colar sword', 59.90)">
@@ -108,7 +108,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Acessórios 8">
+                    <img src="Imagens/acessorio8.png" class="card-img-top" alt="Acessórios 8">
                     <div class="card-body text-center">
                         <h5 class="card-title">Colar Assassin's Creed</h5>
                         <p class="card-text text-muted">59,90</p>
