--- a/camisetas.html
+++ b/camisetas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Camisetas</title>
+  <title>Camisetas | GeekStore</title>
   <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
 
   <!-- Bootstrap e Ícones -->
