--- a/gamers.html
+++ b/gamers.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamers</title>
+    <title>Gamers | GeekStore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -75,7 +75,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 5" title="Gamers 5">
+                    <img src="Imagens/gamer 5.png" class="card-img-top" alt="Gamers 5" title="Gamers 5">
                     <div class="card-body text-center">
                         <h5 class="card-title">Console PlayStation 5 Slim</h5>
                         <p class="card-text text-muted">3.254,07</p>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 6" title="Gamers 6">
+                    <img src="Imagens/gamer6.png" class="card-img-top" alt="Gamers 6" title="Gamers 6">
                     <div class="card-body text-center">
                         <h5 class="card-title">Volante Logitech G923</h5>
                         <p class="card-text text-muted">2.699,90</p>
@@ -97,10 +97,10 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 7" title="Gamers 7">
+                    <img src="Imagens/gamer7.png" class="card-img-top" alt="Gamers 7" title="Gamers 7">
                     <div class="card-body text-center">
                         <h5 class="card-title">PlayStation VR2 + Horizon Call of the Mountain</h5>
-                        <p class="card-text text-muted">#</p>
+                        <p class="card-text text-muted">2.882,07</p>
                         <a class="btn btn-primary" onclick="adicionarAoCarrinho('PlayStation VR2 + Horizon Call of the Mountain', 2882.07)">
                             <i class="bi bi-cart"></i>Comprar</a>
                     </div>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow-sm">
-                    <img src="Imagens/" class="card-img-top" alt="Gamers 8" title="Gamers 8">
+                    <img src="Imagens/gamer8.png" class="card-img-top" alt="Gamers 8" title="Gamers 8">
                     <div class="card-body text-center">
                         <h5 class="card-title">Console Nintendo Switch Lite</h5>
                         <p class="card-text text-muted">1.299,90</p>
