--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <div class="col-md-4">
         <div class="card h-100 shadow-sm">
-          <img src="Imagens/exemplo_acessorio.webp" class="card-img-top" alt="Acessórios Geek" />
+          <img src="Imagens/acessorio3.jpg" class="card-img-top" alt="Acessórios Geek" />
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Acessórios</h5>
             <a href="acessorios.html" class="btn btn-primary mt-auto w-100" aria-label="Acesse a página de Acessórios">Acesse Já</a>
