--- a/menu.html
+++ b/menu.html
@@ -16,8 +16,8 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="produtosDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle"  id="produtosDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="true">
                         Produtos
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="produtosDropdown">
