--- a/parcerias.html
+++ b/parcerias.html
@@ -6,11 +6,11 @@
   <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parcerias | GeekStore</title>
-
-  <!-- Bootstrap + Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <!-- Ícones Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
   <style>
     .section-title {
@@ -44,6 +44,17 @@
       margin-right: 0.5rem;
       color: #0d6efd;
     }
+
+    .social-icons a {
+      margin: 0 5px;
+    }
+    .social-icons a i {
+      font-size: 1.5rem;
+      color: #fff;
+    }
+    .social-icons a:hover i {
+      color: #0d6efd;
+    }
   </style>
 </head>
 
@@ -52,8 +63,11 @@
   <div id="menu"></div>
   <script>
     fetch('menu.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('menu').innerHTML = data);
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('menu').innerHTML = data;
+      })
+      .catch(error => console.error('Erro ao carregar o menu:', error));
   </script>
 
   <main class="container my-5 pt-5">
@@ -71,7 +85,7 @@
         <form class="row g-3">
           <div class="col-md-6">
             <label for="tipo" class="form-label">Tipo de Parceria</label>
-            <select id="tipo" class="form-select">
+            <select id="tipo" class="form-select" required>
               <option selected disabled>Escolha uma opção</option>
               <option value="fornecedor">Fornecedor</option>
               <option value="distribuidor">Distribuidor</option>
@@ -94,8 +108,7 @@
           </div>
           <div class="col-12">
             <label for="mensagem" class="form-label">Mensagem</label>
-            <textarea class="form-control" id="mensagem" rows="4"
-              placeholder="Conte-nos como deseja colaborar..."></textarea>
+            <textarea class="form-control" id="mensagem" rows="4" placeholder="Conte-nos como deseja colaborar..."></textarea>
           </div>
           <div class="col-12 text-end">
             <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
@@ -129,8 +142,8 @@
     </section>
   </main>
 
-  <!-- Adicione isso antes da tag  < / body> -->
-   <div vw class="enabled">
+  <!-- VLibras -->
+  <div vw class="enabled">
     <div vw-access-button class="active"></div>
     <div vw-plugin-wrapper>
       <div class="vw-plugin-top-wrapper"></div>
@@ -140,20 +153,22 @@
   <script>
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script> 
 
-
-  <footer class="footer text-center">
+  <!-- Footer -->
+  <footer class="footer text-center py-4 mt-5">
     <div class="container">
       <h5>GeekStore</h5>
       <p>&copy; 2025 GeekStore. Todos os direitos reservados.</p>
-      <p><a href="index.html">Home</a> | <a href="parcerias.html">Parcerias</a> | <a href="camisetas.html">Camisetas</a>
-        | <a href="gamers.html">Gamers</a> | <a href="acessorios.html">Acessórios</a></p>
+      <p>
+        <a href="index.html">Home</a> |
+        <a href="parcerias.html">Parcerias</a> |
+        <a href="camisetas.html">Camisetas</a> |
+        <a href="gamers.html">Gamers</a> |
+        <a href="acessorios.html">Acessórios</a>
+      </p>
       <p>Desenvolvido por Lucas</p>
-    </div>
-    </div>
-    <div class="container mt-2 pt-22">
-      <p text-muted>Siga-nos nas redes sociais</p>
+
+      <p class="text mt-3">Siga-nos nas redes sociais</p>
       <div class="social-icons">
         <a href="https://www.instagram.com/lucaaasx._.b/" class="btn btn-secondary"><i class="bi bi-instagram"></i></a>
         <a href="https://twitter.com/" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
@@ -162,8 +177,9 @@
       </div>
     </div>
   </footer>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 
 </html>
